--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -331,7 +331,7 @@ ein Kreis, den man \textbf{Kreis des Apollinius} nennt.\\
 Anschaulich:\\
 \\
 \\
-\includegraphics[width=3in]{Apollinus_anschaulich}
+\includegraphics[width=3in]{kap5/Apollinus_anschaulich}
 \\
 Der Satz besagt also, dass alle Punkte $X$ deren Abst"ande zu $A$ ($\overline{AX}$) und zu $B$ ($\overline{XB}$) im Verh"altnis $\lambda$ stehen, auf einem Kreis liegen.\\
 \end{Definition}
@@ -430,7 +430,7 @@ Damit hat man bewiesen, dass f"ur alle Punkte $X$ die Vektoren $\vv{T_{i}X}$ und
 
 Die Figur und die Zusammenh"ange, die man durch den Satz des Apollinius erhalten hat, kann man benutzen, um ein wenig mit Winkeln zu spielen: \\
 \\
-\includegraphics[width=5in]{Apollinius_Winkel}\\
+\includegraphics[width=5in]{kap5/Apollinius_Winkel}\\
 \\
 \begin{mdframed}
 Auf dieser Skizze sind 10 Winkel gekennzeichnet, zu welchen sich eine ganze Reihe von Beziehungen aufstellen l"asst:\\
@@ -448,7 +448,7 @@ Hiermit bekommt man ein zehndimensionales Gleichungssystem mit dem sich $\gamma_
 Eine Innenwinkelhalbierende eines Dreiecks teilt die gegen"uberliegende Seite im Verh"altnis der Anliegenden Seiten. \qquad $\gamma_{1}=\gamma_{2} \Rightarrow \overline{AT_{i}}:\overline{T_{i}B}=\overline{AX}:\overline{XB}$
 \end{Definition}
  \begin{center}
-\includegraphics[width=4.7in]{Apollinus_Winkelhalbierende_Bild}
+\includegraphics[width=4.7in]{kap5/Apollinus_Winkelhalbierende_Bild.pdf}
 \end{center}
 \end{small}
 Quelle (Apollinus) : Tobias Rave, 06.03.18, Skript 1ere SBC S.68-71
