--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -1,6 +1,5 @@
 \chapter{Integrale}
-\section{Integralrechnung}
-\subsection{Stammfunktionen}
+\section{Stammfunktionen}
 Eine Funktion $F$ heißt Stammfunktion der Funktion $f$, wenn $F'(x)=f(x)$
 gilt.
 
@@ -10,7 +9,7 @@ konstanter Summand weg. Jede Funktion hat also unendlich viele
 Stammfunktionen, die sich aber nur um einen konstanten Summanden
 unterscheiden.
 
-\subsection{Begriff des Integrals}
+\section{Begriff des Integrals}
 
 \begin{figure}[htbp]\centering
   \includegraphics{math3.eps}
@@ -60,7 +59,7 @@ Als Physiker sagt man, durch Integration werden Elemente der Form  $\dD
 y=f(x)\dD x$
 aufaddiert.
 
-\subsection[Der Hauptsatz]{Der Hauptsatz der Differential- und
+\section[Der Hauptsatz]{Der Hauptsatz der Differential- und
   Integralrechnung}
 Die Bestimmung der Grenzwerte in Gleichung~\eqref{eq:33} ist eine mühselige
 Angelegenheit. Aber alles wendet sich zum Guten, denn Integrale können mittels
@@ -134,7 +133,7 @@ dies sei etwas besonderes, aber auch die Werte eines Logarithmus oder eines
 Sinus kann man nur mit dem Taschenrechner berechnen oder aus einer
 Funktionentafel entnehmen.
 
-\subsection{Integrationsregeln}
+\section{Integrationsregeln}
 
 Da Integration die Umkehrung des Ableitens ist (">Aufleiten"<) übertragen sich
 die Ableitungsregeln auf das Integrieren:
@@ -169,7 +168,7 @@ nur Flächen, mit ihnen kann man Volumina, Energien, Ladungen und und und
 \ldots ausrechnen, und bei vielen dieser Größen sind negative Werte durchaus
 sinnvoll!
 
-\subsubsection{Produktintegration}
+\subsection{Produktintegration}
 Nach der Produktregel ist $(uv)'=u'v+uv'$. Integriert man nun beide Seiten,
 und beachtet, dass nach dem Hauptsatz $\int (uv)'\dD x=uv$ ist, dann bekommt
 man die Formel für die Produktintegration, die auch \emph{partielle
@@ -198,7 +197,7 @@ $v'=1/x$ und erhält:
 x\ln x-\int 1\dD x=x\ln x -x
 \]
 
-\subsubsection{Substitutionsmethode}
+\subsection{Substitutionsmethode}
 Es soll die Stammfunktion von $x(1-x^2)^9$ bestimmt werden. Hier wäre zum
 Ableiten die Kettenregel und die Produktregel nötig, beides gibt es aber in
 reiner Form beim Integrieren nicht. Man kann aber häufig durch geschickte
@@ -248,7 +247,7 @@ A=\frac{ab}{2}\left[u+\sin u\cos u\right]_{-\frac{\pi}{2}}^{+\frac{\pi}{2}}=
 \]
 Die gesamte Fläche der Ellipse ist doppelt so groß, also $\pi a b$.
 
-\subsubsection{Partialbruchzerlegung}
+\subsection{Partialbruchzerlegung}
 Die Partialbruchzerlegung ist ein allgemeines Verfahren zur Integration
 gebrochen rationaler Funktionen. Es sei gegeben:
 \begin{equation}
@@ -349,7 +348,7 @@ Insbesondere ist dann (rechne das nach!)
        \frac{5}{24}\cdot\frac{y}{(y^2+1)^2}+\frac{y}{6(y^2+1)^3}
 \end{align*}
 
-\subsection{Beispiele zur Integration}
+\section{Beispiele zur Integration}
 \NA Man bestimme die Fläche unter der Parabel $y=2x^2$ im Bereich $1\le x\le
 4$.
 \[
