--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 \fancyhead[R]{Skript SMP}
 \fancyfoot[C]{\thepage}
 \parindent 0ex
-\nonstopmode                                    %Fehler bei Kompilierung werden ignoriert (weniger umständlich)
+\nonstopmode                                    %Fehler bei Kompilierung werden "leise" gestellt (weniger umständlich)
 
 
 %Zahlenmengen-darstellung:
@@ -58,6 +58,9 @@
 \include{kap9/kap9}
 \include{kap10/kap10}
 \include{kap11/kap11}
+\include{kap12/kap12}
+\include{kap13/kap13}
+\include{kap14/kap14}
 
 %und so weiter
 
