--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -206,17 +206,17 @@ Diese begegnen einen bei gebrochenrationalen Funktion mit $n>m+1$.\\
 \subsection{Monotonie}
 
 \begin{Definition}
-Eine stetige Funktion $f$ mit $a,b\in I ''eingeschlossen in'' D_{f}$ ist :\\
+Eine stetige Funktion $f$ mit $a,b\in I \subset D_{f}$ ist :\\
 \begin{enumerate}
-\item ... auf dem Intervall $I$ monoton wachsend, wenn $\forall a < b: f(a)? f(b)$ 
-\item ... auf dem Intervall $I$ monoton fallend, wenn $\forall a < b: f(a)? f(b)$ \\
+\item ... auf dem Intervall $I$ monoton wachsend, wenn $\forall a < b: f(a)\leq f(b)$ 
+\item ... auf dem Intervall $I$ monoton fallend, wenn $\forall a < b: f(a) \geq f(b)$ \\
 \end{enumerate}
 Wenn die Ordnungsrelation strikt sind, dann wird die Funktion als \textbf{streng monoton} bezeichnet.\\
 Die Funktion $f$ hat eine Ableitungsfunktion $f'$. Falls $f$...
 \begin{enumerate}
-\item monoton wachsend auf $I$ ist, dann ist $f'(x)?0$, $\forall x \in I$
-\item monoton fallend auf $I$ ist, dann ist $f'(x)?0$, $\forall x \in I$
-\item konstant auf $I$ ist, dann ist $f'(x)=0$, $\forall x \in I$
+\item monoton wachsend auf $I$ ist, dann ist $f'(x)\geq0$, \quad $\forall x \in I$
+\item monoton fallend auf $I$ ist, dann ist $f'(x)\leq0$, \quad $\forall x \in I$
+\item konstant auf $I$ ist, dann ist $f'(x)=0$, \quad $\forall x \in I$
 \end{enumerate}
 Beim Aufstellen der Monotonietabelle sind Definitinsl"ucken zu beachten.
 \end{Definition}
@@ -242,3 +242,5 @@ Hier ist die Kurvenschar der Funktion\\ $f(x)=ax^3$. Sie verlaufen alle durch da
 \begin{minipage}[b]{0.4\linewidth}
 \includegraphics[height=12\baselineskip]{kap3/BundelFunktionenscharen.eps}
 \end{minipage}
+
+\subsection{Beispiel}
