--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -75,7 +75,7 @@ Hieraus ergeben sich einige weitere Relationen, wie z.B. $\sin(2a)$. Diese lasse
 In einem beliebigen Dreieck gelten abgewandelte Formen der aus der 8. Klasse bekannten Sätze:
 \begin{Theorem}
   $\dfrac {a} {sin(\alpha)}=\dfrac {b} {sin(\beta)}=\dfrac {c} {sin(\gamma)}$\\\\
-  $c²=a²+b²-2abcos(\gamma)$
+  $c^2=a^2+b^2-2abcos(\gamma)$
 \end{Theorem}
 \definecolor{qqwuqq}{rgb}{0,0.39,0}
 \begin{tikzpicture}[line cap=round,line join=round,>=triangle 45,x=0.53cm,y=0.64cm]
