--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,8 @@
 \usepackage{esvect}
 \usepackage{listings}                           %für Pseudocode/Code
 \usepackage{color}                              %und dessen Einfärbung
+\usepackage{booktabs} 
+\usepackage{enumitem} %angepasstes enumerieren
 
 \usetikzlibrary{arrows}
 
