--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -27,9 +27,9 @@ $1+2+3+...+n=\sum\limits_{k=1}^{n}k=\frac{n(n+1)}{2}$\\\\
 \begin{minipage}[c]{0.5\textwidth}
 	\underline{Begründung:}\\
 	\begin{tabular}{c∣c∣c∣c∣c∣c∣c}
-		&$1&2&3&4&...&n\\\hline
-		&n&n-1&n-2&n-3&...&1\\\hline
-		\sum&n+1&n+1&n+1&n+1&...&n+1$\\
+		&$1$&$2$&$3$&$4$&$...$&$n$\\\hline
+		&$n$&$n-1$&$n-2$&$n-3$&$...$&$1$\\\hline
+		$\sum$&$n+1$&$n+1$&$n+1$&$n+1$&$...$&$n+1$\\
 	\end{tabular}
 \end{minipage}
 \begin{minipage}{0.5\textwidth}
@@ -81,7 +81,7 @@ $s_{n}=\dfrac{n\cdot(2a_{x}+(n-1)\cdot d)}{2}$
 \begin{Beweis}
 Sei eine arithmetische Folge $a$, mit Startglied $a_{x}$ und Differenz $d$, und $s$ die entsprechende Reihe ist.\\
 $s_{n}=a_{x}+a_{x+1}+a_{x+2}+...a_{x+n-1}\\
-=a_{x}+(a_{x}+d})+(a_{x}+2d})+...+(a_{x}+(n-1)\cdot d})\\
+=a_{x}+(a_{x}+d)+(a_{x}+2d)+...+(a_{x}+(n-1)\cdot d})\\
 =n\cdot a_{x}+d+2d+...+(n-1)\cdot d\\
 =n\cdot a_{x}+(1+2+...+(n-1))\cdot d\qquad$	(Gauß)\\
 $=n\cdot a_{x}+\dfrac{(n-1)\cdot n}{2}\cdot d\\
@@ -101,8 +101,8 @@ $s_{n}=\sum\limits_{i=x}^{n+x-1}a_{i}=a_{x}\cdot \dfrac{1-q^n}{1-q}$
 \begin{Bemerkung}
 \item Am häufigsten wird verwendet:
 \begin{itemize}
-\item Mit Startglied $a_{0}$ : $s_{n}=a_{0}\cdot \dfrac{1-q^n}{1-q}}$
-\item Mit Startglied $a_{1}$ : $s_{n}=a_{1}\cdot \dfrac{1-q^n}{1-q}}$
+\item Mit Startglied $a_{0}$ : $s_{n}=a_{0}\cdot \dfrac{1-q^n}{1-q}$
+\item Mit Startglied $a_{1}$ : $s_{n}=a_{1}\cdot \dfrac{1-q^n}{1-q}$
 \end{itemize}
 \end{Bemerkung}
 
