--- a/style.tex
+++ b/style.tex
@@ -22,7 +22,7 @@
 
 %Beweis:
 \newenvironment{Beweis}
-  {\begin{tcolorbox}[colback=grey!5!white,colframe=grey!75!black,opacityframe=0.5, opacitybacktitle=0.5,sharpish corners,boxrule=0pt,frame hidden,title=Beweis,breakable,break at=23cm,pad at break=1mm,]}
+  {\begin{tcolorbox}[colback=gray!5!white,colframe=gray!75!black,opacityframe=0.5, opacitybacktitle=0.5,sharpish corners,boxrule=0pt,frame hidden,title=Beweis,breakable,break at=23cm,pad at break=1mm,]}
   {\end{tcolorbox}}
 
 
@@ -70,7 +70,7 @@
   {\par\noindent\normalfont\par\nopagebreak%
   \begin{mdframed}[
      linewidth=2pt,
-     linecolor=grey,
+     linecolor=gray,
      bottomline=false,topline=false,rightline=false,
      innerrightmargin=0pt,innertopmargin=0pt,innerbottommargin=0pt,
      innerleftmargin=1em,% Distanz zwischen vertikaler Strich & Inhalt
