--- a/kap10/kap10.tex
+++ b/kap10/kap10.tex
@@ -33,17 +33,17 @@ Folgendes macht die Syntax Pythons aus:\\
 Python verwendet Schleifen und Verzweigungen.\\
 \begin{lstlisting}[language=Python]
 	#Schleifen:
-	for: #(Wiederholung über Elemente einer Sequenz (Zahl, Liste, Zeit...))
+	for: #(Wiederholung ueber Elemente einer Sequenz (Zahl, Liste, Zeit...))
 		#Inhalt der Schleife
 	while: #(Wiederholung, solange ein logischer Ausdruck wahr ist)
 		#Inhalt der Schleife
 
 	#Verzweigungen:
-	if: #(prüft,ob ein logischer Ausdruck wahr ist)
+	if: #(prueft,ob ein logischer Ausdruck wahr ist)
 		#Inhalt der Verzweigung
-	elif: #(prüft,ob ein anderer logischer Ausdruck wahr ist)
+	elif: #(prueft,ob ein anderer logischer Ausdruck wahr ist)
 		#Inhalt der Verzweigung
-	else: #(letzter Fall, tritt ein, wenn keine der obigen Bedingungen erfüllt wurde)
+	else: #(letzter Fall, tritt ein, wenn keine der obigen Bedingungen erfuellt wurde)
 		#Inhalt der Verzweigung
 \end{lstlisting}
 \subsubsection{Beispiel}
