Update zur Algorythmik

--- a/main.tex
+++ b/main.tex
@@ -18,8 +18,10 @@
 \usepackage{esvect}
 \usepackage{listings}                           %für Pseudocode/Code
 \usepackage{color}                              %und dessen Einfärbung
-\usepackage{booktabs} 
+\usepackage{booktabs}
 \usepackage{enumitem} %angepasstes enumerieren
+\usepackage{hyperref}
+
 
 \usetikzlibrary{arrows}
 
