--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,6 @@
 \usepackage{graphicx}	                          %Bilder einfügen
 \usepackage[listings,skins,breakable]{tcolorbox}
 \usepackage{tikz,pgf}                               %Grafiken zeichnen
-\usetikzlibrary{arrows}
 \usepackage{mdframed}	                          %Box			%\begin{mdframed} 		und			%\end{mdframed}
 \usepackage{epstopdf}
 \usepackage[utf8]{inputenc}
@@ -18,9 +17,9 @@
 \usepackage{esvect}
 \usepackage{listings}                           %für Pseudocode/Code
 \usepackage{color}                              %und dessen Einfärbung
-\usepackage{booktabs} 
+\usepackage{booktabs}
 \usepackage{enumitem} %angepasstes enumerieren
-
+\usepackage{enumerate}
 \usetikzlibrary{arrows}
 
 \pagestyle{fancy}
